--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,4 +1,4 @@
-.body{
+.container {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -11,4 +11,24 @@
     border-radius: 50%;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 400px;
+    padding-bottom: 30px;
+}
+
+.card img {
+    height: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
