--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,7 @@ footer{
     bottom:0;
     width:100%;
     height:60px;
-    background:#6cf;
+    background:#f2f2f2;
     text-align: center;
     line-height: 60px;
     font-size: 20px;
