--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+
 *{
     padding: 0;
     margin: 0;
+}
+
+h1{
+    font-family: 'Kdam Thmor Pro', sans-serif;
 }
 
 .main{
