--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,8 +5,19 @@
     margin: 0;
 }
 
+.main{
+    background-image: url('/src/assets/Background/bg-image.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    transition: .2s;
+
+}
+
+
 h1{
     font-family: 'Kdam Thmor Pro', sans-serif;
+    background-color: #416C83;
 }
 
 .main{
@@ -15,18 +26,6 @@ h1{
 }
 
 
-video{
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-}
 .content {
     position: absolute;
     width: 100%;
@@ -37,15 +36,4 @@ video{
     justify-content: center;
     align-items: center;
     color: white;
-  }
-
-  
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,.4);
-    /* background-color: #000000cc; */
-  }
+ }
